Change from scratch consensus communication process and adding support for kafka optimize code performance and fix maven issues