@@ -31,13 +31,13 @@
     </developers>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
         <java.version>11</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <logback.version>1.2.6</logback.version>
         <commonos_lang.version>3.12.0</commonos_lang.version>
         <trove4j.version>3.0.3</trove4j.version>
-        <guava.version>31.1-jre</guava.version>
+        <guava.version>33.3.1-jre</guava.version>
         <junit.version>5.8.2</junit.version>
         <jupiter.version>5.3.0</jupiter.version>
         <surefire.version>1.3.2</surefire.version>
@@ -46,13 +46,14 @@
         <jmh.version>1.34</jmh.version>
         <awaitutility.version>4.2.0</awaitutility.version>
         <lombok.version>1.18.32</lombok.version>
-        <serializer.version>5.4.3</serializer.version>
+        <activej.version>6.0-beta2</activej.version>
         <commons_net.version>3.9.0</commons_net.version>
         <logback.version>1.4.14</logback.version>
         <compress.version>1.27.1</compress.version>
         <fury_core.version>0.8.0</fury_core.version>
         <fastjson2.version>2.0.45</fastjson2.version>
         <lz4.version>1.8.0</lz4.version>
+        <comons_collections4.version>4.5.0-M2</comons_collections4.version>
     </properties>
     <repositories>
         <repository>
@@ -110,6 +111,11 @@
     </distributionManagement>
     <dependencies>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>${comons_collections4.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba.fastjson2</groupId>
             <artifactId>fastjson2</artifactId>
             <version>${fastjson2.version}</version>
@@ -138,11 +144,6 @@
             <groupId>commons-net</groupId>
             <artifactId>commons-net</artifactId>
             <version>${commons_net.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.activej</groupId>
-            <artifactId>activej-serializer</artifactId>
-            <version>${serializer.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
@@ -195,6 +196,16 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.activej</groupId>
+            <artifactId>activej-types</artifactId>
+            <version>${activej.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.activej</groupId>
+            <artifactId>activej-serializer</artifactId>
+            <version>${activej.version}</version>
         </dependency>
     </dependencies>
     <build>
@@ -349,23 +360,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- <plugin>
-                       <groupId>org.apache.maven.plugins</groupId>
-                       <artifactId>maven-surefire-plugin</artifactId>
-                       <version>3.0.0-M7</version>
-                       <configuration>
-                           <runOrder>alphabetical</runOrder>
-                           <argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
-                       </configuration>
-                       <dependencies>
-                           <dependency>
-                               <groupId>org.junit.jupiter</groupId>
-                               <artifactId>junit-jupiter-engine</artifactId>
-                               <version>5.3.2</version>
-                           </dependency>
-                       </dependencies>
-                   </plugin>-->
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
